bug in dashboard
