# backend/app.js
@@ -32,13 +32,18 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 // Middleware
 // app.use(helmet());
-app.use(cors());
+
+app.use(cors({
+  origin: 'http://localhost:5173', 
+  credentials: true
+}));
+
 app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 
 console.log('Registered Mongoose models:', mongoose.modelNames());
 
-app.route('/api/trips')
+app.route('/api/trips/:id')
     .post(createTrip)
     .get(getAllTrips);
 
